# Neutron

./: .gitignore  build.gradle  gradle.properties  readme.md  settings.gradle
api/: build.gradle
app/: build.gradle
app/src/androidTest/java/com/mjtg/neutron/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: pre.js
app/src/main/java/com/mjtg/neutron/: AboutActivity.java  ApkPatch.java  ExeCommand.java  FileActivity.java  FileUntil.java  FileViewAdapter.java  GData.java  (+8 more)
app/src/main/jni/: Android.mk  neutron.cy.cpp  test.cy.cpp
app/src/main/res/layout/: activity_about.xml  activity_file.xml  activity_main.xml  activity_select.xml  activity_setting.xml  alert.xml  file_row.xml  mod_row.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
patch/: build.gradle  gradle.properties
patch/gradle/wrapper/: gradle-wrapper.properties
patch/src/main/: AndroidManifest.xml
patch/src/main/cpp/: CMakeLists.txt  neutron.cy.cpp
patch/src/main/jni/: CMakeLists.txt  neutron.cy.cpp
patch/src/main/res/xml/: filepaths.xml
patcher/: README.md  build.gradle
patcher/src/main/java/android/os/: Bundle.java
runtime/: build.gradle  local.properties  settings.gradle
runtime/api/: build.gradle
runtime/preloading/: build.gradle
runtime/preloading/src/main/cpp/: CMakeLists.txt  stub.cpp
runtime/running/: build.gradle
runtime/running/src/main/: AndroidManifest.xml
runtime/running/src/main/cpp/: CMakeLists.txt  neutron.cy.cpp
tools/: README.md  build.gradle
(+59 files in other folders)
